Basic calculator setup with screen and keys

--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="screen">1234567890</div>
+        <div class="row 1">
+            <button class="key">C</button>
+            <button class="key">%</button>
+            <button class="key">±</button>
+            <button class="key">/</button>
+        </div>
+        <div class="row 2">
+            <button class="key">7</button>
+            <button class="key">8</button>
+            <button class="key">9</button>
+            <button class="key">*</button>
+        </div>
+        <div class="row 3">
+            <button class="key">4</button>
+            <button class="key">5</button>
+            <button class="key">6</button>
+            <button class="key">-</button>
+        </div>
+        <div class="row 4">
+            <button class="key">1</button>
+            <button class="key">2</button>
+            <button class="key">3</button>
+            <button class="key">+</button>
+        </div>
+        <div class="row 5">
+            <button class="key">.</button>
+            <button class="key">0</button>
+            <button class="key"></button>
+            <button class="key">=</button>
+        </div>
+    </div>
 </body>
 </html>
