--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <div class="container">
-        <div class="screen">1234567890</div>
+        <div class="screen">12345678900000</div>
         <div class="row 1">
-            <button class="key">C</button>
-            <button class="key">%</button>
-            <button class="key">±</button>
-            <button class="key">/</button>
+            <button class="key clear">C</button>
+            <button class="key op">%</button>
+            <button class="key op">±</button>
+            <button class="key op">/</button>
         </div>
         <div class="row 2">
-            <button class="key">7</button>
-            <button class="key">8</button>
-            <button class="key">9</button>
-            <button class="key">*</button>
+            <button class="key num">7</button>
+            <button class="key num">8</button>
+            <button class="key num">9</button>
+            <button class="key op ">*</button>
         </div>
         <div class="row 3">
-            <button class="key">4</button>
-            <button class="key">5</button>
-            <button class="key">6</button>
-            <button class="key">-</button>
+            <button class="key num">4</button>
+            <button class="key num">5</button>
+            <button class="key num">6</button>
+            <button class="key op">-</button>
         </div>
         <div class="row 4">
-            <button class="key">1</button>
-            <button class="key">2</button>
-            <button class="key">3</button>
-            <button class="key">+</button>
+            <button class="key num">1</button>
+            <button class="key num">2</button>
+            <button class="key num">3</button>
+            <button class="key op">+</button>
         </div>
         <div class="row 5">
-            <button class="key">.</button>
-            <button class="key">0</button>
-            <button class="key"></button>
-            <button class="key">=</button>
+            <button class="key op">.</button>
+            <button class="key num">0</button>
+            <button class="key op"><</button>
+            <button class="key equals">=</button>
         </div>
     </div>
 </body>
