--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="screen">12345678900000</div>
+        <div class="display"></div>
         <div class="row 1">
             <button class="key clear">C</button>
             <button class="key op">%</button>
