added consecutive operator capability

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <button class="key op">+</button>
         </div>
         <div class="row 5">
-            <button class="key op">.</button>
+            <button class="key point">.</button>
             <button class="key num">0</button>
-            <button class="key op"><</button>
+            <button class="key op">DEL</button>
             <button class="key equals">=</button>
         </div>
     </div>
