--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row 1">
             <button class="key clear">C</button>
             <button class="key op">%</button>
-            <button class="key op">±</button>
+            <button class="key plusminus">±</button>
             <button class="key op">/</button>
         </div>
         <div class="row 2">
@@ -37,7 +37,7 @@
         <div class="row 5">
             <button class="key point">.</button>
             <button class="key num">0</button>
-            <button class="key op">DEL</button>
+            <button class="key delete">DEL</button>
             <button class="key equals">=</button>
         </div>
     </div>
